adds gtm script

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/dg-favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tokenizer</title>
+    <title>Deepgram Tokenizer</title>
   </head>
   <body>
     <div id="app"></div>
